# wes-WS

components/mqtt_app/: CMakeLists.txt  mqtt_app.c  mqtt_app.h
components/ui_app/: ui_app.c
components/ui_app/squareline/project/: CMakeLists.txt  esp32_gui.sll  esp32_gui.slp  esp32_gui.spj  filelist.txt  project.info  ui.c  ui.h  ui_events.c  ui_events.h
components/ui_app/squareline/project/images/: ui_img_1020243359.c  ui_img_1713359611.c  ui_img_1716585447.c  ui_img_246777154.c  ui_img_277078169.c  ui_img_290899601.c  ui_img_427326921.c  ui_img_736385955.c  ui_img_heartbeat_png.c  ui_img_led_icon_png.c
components/ui_app/squareline/project/screens/: ui_Color_Scr.c  ui_Color_Scr.h  ui_Gamescr.c  ui_Gamescr.h  ui_Home_Scr.c  ui_Home_Scr.h  ui_InfoScr.c  ui_InfoScr.h  ui_PERscreen.c  ui_PERscreen.h  ui_PeekBooScr.c  ui_PeekBooScr.h  ui_WifiScr.c  ui_WifiScr.h  ui_glazbascr.c  ui_glazbascr.h  ui_photoScr.c  ui_photoScr.h  ui_ppgscr.c  ui_ppgscr.h
main/: CMakeLists.txt  app_main.c  audio.c  color.c  gui.c  gui.h  lux.c  ppg.c
